# schedule-book-bot

./: .env.example  .~lock.Изменения в расписании - 3.xlsx#  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  last_schedule.xlsx  pg_hba.conf  pyproject.toml  temp.xlsx
src/: app.py  config.py  database.py  exceptions.py  get_schedule.py  loader.py  main.py  models.py  parse_xl.py  queries.sql  run.py  schemas.py  start.sh  utils.py
src/db/: database.py  db.py  db.sql
src/db/migrations/: env.py
src/db/migrations/versions/: 4cff02ab96cb_.py
src/handlers/: divide_books_manually.py  divided_books.py  help.py  profile.py  routers.py  schedule.py  start.py  states.py
src/keyboards/: builders.py  default.py  profile.py
src/models/: base.py  devided_books.py  divided_books.py  grade.py  lesson.py  schedule.py  user.py
src/services/: devide_books.py  divide_books.py  divided_books.py  divided_books_manually.py  get_schedule.py  last_schedule.xlsx  parse_schedule.py  profile.py  schedule.py  send_notices.py  send_updated_schedule.py  start.py
